# setuptools-coconut

./: .cirrus.yml  .coveragerc  .isort.cfg  .pre-commit-config.yaml  .projections.json  CONTRIBUTING.rst  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  requirements.txt
src/setuptools_coconut/: __init__.py  api.py  config.py  debug.py  skeleton.py
tests/: conftest.py  helpers.py  test_api.py  test_config.py  test_examples.py  test_skeleton.py
tests/examples/packaging_tutorial/: pyproject.toml  setup.cfg
tests/examples/packaging_tutorial/src/example_package/: example.coco
tests/examples/with-datafiles/: README.rst  pyproject.toml  setup.cfg
tests/examples/with-datafiles-inplace-compile/: README.rst  setup.cfg
tests/invalid-examples/invalid_config/: pyproject.toml
tests/invalid-examples/invalid_config/src/example/: factorial.coco
tests/invalid-examples/missing_config/: README.rst  pyproject.toml  setup.cfg
