[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = [
  "setuptools>=46.1.0",
  "setuptools_scm[toml]>=5",
  "setuptools_coconut",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
relative_to = "__file__"

[tool.coconut]
