[metadata]
name = with-datafiles
description = Add a short description here!
author = Anderson Bravalheri
author_email = andersonbravalheri@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages =
    with_datafiles
    with_datafiles.data
include_package_data = True
package_dir =
    with_datafiles=build/src/with_datafiles
    with_datafiles.data=src/with_datafiles/data
