[metadata]
name = example
version = 0.0.1
description = Add a short description here!
author = Anderson Bravalheri
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    = build/src

[options.packages.find]
where = build/src
exclude =
    tests
